[package]
name = "lock_free_buddy_allocator"
version = "0.2.1"
edition = "2021"
crate-type = ["lib"]
authors = ["Pavel Skripkin paskripkin@gmail.com"]
license = "MIT"
repository = "https://github.com/pskrgag/lock_free_buddy_allocator"
keywords = ["lock-free", "allocator", "no_std", "buddy"]
description = "Scalable lock-free buddy system allocator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version = "0.5", feature = ["html_reports"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[[bench]]
name = "buddy_benchmark"
harness = false
